--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": {
     "url": "git://github.com/DulliAG/test-package.git"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
+    "access": "restricted"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
