--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "access": "restricted"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified",
+    "test": "jest --passWithNoTests",
     "build": "tsc",
     "patch": "npx standard-version --release-as patch",
     "minor": "npx standard-version --release-as minor",
@@ -21,6 +21,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^28.1.3",
+    "jest": "^28.1.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
