--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -17,7 +17,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm test
+      - run: |
+          npm install
+          npm test
 
   publish-gpr:
     needs: build
