--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^28.1.3",
+    "@types/jest": "^28.1.1",
     "jest": "^28.1.1",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.7.4"
   },
   "dependencies": {
