--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dulliag/test-package",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "",
   "main": "lib/index.js",
   "repository": {
@@ -24,9 +24,8 @@
     "@types/jest": "^28.1.1",
     "jest": "^28.1.1",
     "ts-jest": "^28.0.4",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
+    "typescript": "^4.7.4",
     "standard-version": "^9.5.0"
-  }
+  },
+  "dependencies": {}
 }
